# fastio

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
bench/: README.md  bench_fastjson.py
ci/: README.md
crates/fastcomp/: Cargo.toml  README.md
crates/fastcomp/src/: lib.rs
crates/fastform/: Cargo.toml  README.md
crates/fastform/src/: lib.rs
crates/fastjson/: Cargo.toml  README.md
crates/fastjson/src/: lib.rs
crates/fastmatch/: Cargo.toml  README.md
crates/fastmatch/src/: lib.rs
crates/fastrate/: Cargo.toml  README.md
crates/fastrate/src/: lib.rs
examples/: asgi_app.py  asgi_server.py
python/fastcomp/: README.md  pyproject.toml
python/fastcomp/python/fastcomp/: __init__.py
python/fastcomp/src/fastcomp/: __init__.py  __init__.pyi
python/fastcomp/tests/: test_compress.py
python/fastform/: README.md  pyproject.toml
python/fastform/python/fastform/: __init__.py
python/fastform/src/fastform/: __init__.py  __init__.pyi
python/fastform/tests/: test_query.py
python/fastjson/: README.md  pyproject.toml
python/fastjson/python/fastjson/: __init__.py
python/fastjson/src/fastjson/: __init__.py  __init__.pyi
python/fastjson/tests/: test_roundtrip.py
python/fastmatch/: README.md  pyproject.toml
python/fastmatch/python/fastmatch/: __init__.py
python/fastmatch/src/fastmatch/: __init__.py  __init__.pyi
python/fastmatch/tests/: test_router.py
python/fastrate/: README.md  pyproject.toml
python/fastrate/python/fastrate/: __init__.py
python/fastrate/src/fastrate/: __init__.py  __init__.pyi
python/fastrate/tests/: test_token_bucket.py
tests/: test_fastjson.py
