[package]
name = "fastcomp"
version = "0.1.0"
edition = "2021"
description = "High-performance compression bindings"
license = "MIT OR Apache-2.0"
repository = "https://example.com/fastio"
readme = "README.md"
authors = ["FastIO Contributors"]

[lib]
name = "fastcomp"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module", "pyo3/abi3", "pyo3/abi3-py39"]

[dependencies]
pyo3 = { version = "0.21", features = ["macros"] }
flate2 = { version = "1.0", features = ["rust_backend"] }
brotli = "3"
zstd = { version = "0.13", features = ["pkg-config", "zstdmt"] }
