[build-system]
requires = ["maturin>=1"]
build-backend = "maturin"

[project]
name = "fastcomp"
version = "0.1.0"
requires-python = ">=3.9"
classifiers = ["Programming Language :: Python :: 3"]

[tool.maturin]
bindings = "pyo3"
module-name = "fastcomp._fastcomp"
python-source = "python"
manifest-path = "../../crates/fastcomp/Cargo.toml"
