[build-system]
requires = ["maturin>=1"]
build-backend = "maturin"

[project]
name = "fastform"
version = "0.1.0"
requires-python = ">=3.9"
classifiers = ["Programming Language :: Python :: 3"]

[tool.maturin]
bindings = "pyo3"
module-name = "fastform._fastform"
python-source = "python"
manifest-path = "../../crates/fastform/Cargo.toml"
