[build-system]
requires = ["maturin>=1"]
build-backend = "maturin"

[project]
name = "fastmatch"
version = "0.1.0"
requires-python = ">=3.9"
classifiers = ["Programming Language :: Python :: 3"]

[tool.maturin]
bindings = "pyo3"
module-name = "fastmatch._fastmatch"
python-source = "python"
manifest-path = "../../crates/fastmatch/Cargo.toml"
