[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "fastrate"
version = "0.1.0"
description = "Concurrent rate limiting primitives"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "FastIO Contributors" }]
license = { text = "MIT OR Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
]
dependencies = []

[project.urls]
Homepage = "https://example.com/fastio"
Repository = "https://example.com/fastio"

[tool.maturin]
features = ["extension-module"]
module-name = "fastrate._fastrate"
python-source = "src"

[tool.uv]
dev-dependencies = [
    "pytest",
    "hypothesis",
    "ruff",
    "ty>=0.9",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ty]
python-version = "3.11"
